--- a/src/css/5_fonts.css
+++ b/src/css/5_fonts.css
@@ -40,8 +40,8 @@
 
 /*FONT-COLORS*/
 
---light-font-color: rgba(51, 51, 51, .65);
---dark-font-color: rgba(0, 0, 0, .75);
+--light-font-color: rgba(51, 51, 51, .70);
+--dark-font-color: rgba(0, 0, 0, .70);
 --accent-color:red;
 
 /*FONT SIZES*/
